# rust-learning-roadmap

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  create  create.cmd  next  next.cmd  progress  progress.cmd  search  search.cmd
.cargo/: config.toml
.claude/commands/: review.md
advanced-projects/: Cargo.toml
advanced-projects/src/: main.rs
basic-projects/: Cargo.toml
desktop-projects/: Cargo.toml
desktop-projects/src/: main.rs
experiments/: Cargo.toml
experiments/src/: lib.rs
game-projects/: Cargo.toml
game-projects/src/: main.rs
ownership-projects/: Cargo.toml
ownership-projects/src/: main.rs
src/: main.rs
tools/: Cargo.toml
tools/src/: lib.rs
wasm-projects/: Cargo.toml
wasm-projects/src/: lib.rs
web-projects/: Cargo.toml
web-projects/src/: main.rs
