[package]
name = "advanced-projects"
version.workspace = true
edition.workspace = true

[dependencies]
# Dependencies will be uncommented as projects are implemented
# tokio = { version = "1.35", features = ["full"] }
# serde = { version = "1.0", features = ["derive"] }
# anyhow = "1.0"
# thiserror = "1.0"