[package]
name = "experiments"
version.workspace = true
edition.workspace = true

[dependencies]
# Common crates for experimentation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8.5"