[package]
name = "tools"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
anyhow = "1.0"
colored = "2.1"
walkdir = "2.5"
dialoguer = "0.11"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"