[package]
name = "web-projects"
version.workspace = true
edition.workspace = true

[dependencies]
# Dependencies will be uncommented as projects are implemented
# tokio = { version = "1.35", features = ["full"] }
# axum = "0.7"
# reqwest = { version = "0.11", features = ["json"] }
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"